--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-select": "^4.3.1",
     "react-toastify": "^7.0.4"
   }
 }
